# ark-rp-visualisation

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  flake.nix  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
src/: app.py  callback_patterns.py  data_loader.py  enums.py  is_valid_plot.py  logging_setup.py  plots.py  process_data.py  router.py  rp_plot_builder.py  rp_processor.py  test.py
src/ark_rp_visualisation/: app.py  layout.py  router.py
src/ark_rp_visualisation/core/: data_loader.py  models.py  plot_builder.py
src/ark_rp_visualisation/utils/: serialisation.py
src/backend/: data_loader.py  database_transformer.py  enums.py  metadata.py  plot_builder.py  plot_transformer.py
src/core/: __init__.py  data_loader.py  enums.py  models.py
src/dashboard/: callback_patterns.py  callbacks.py  customisation.py  fields.py  figures.py  filters.py  fullscreen_layout.py  graph_engine.py  layout.py  models.py  plot.py  plot_builder.py  router.py  tabs.py
src/frontend/: __init__.py  callbacks.py  controls.py  filters.py  layout.py  plot.py  tabs.py
src/pages/dashboard/: __init__.py  customisation.py  fields.py  filters.py  graph_engine.py  graph_ui.py  layout.py  (+1 more)
src/pipeline/: database_transformer.py  enums.py  metadata.py  plot_builder.py  plot_transformer.py  plots.py
src/plot/: data_loader.py  database_transformer.py  enums.py  metadata.py  plot_builder.py  plot_transformer.py
src/utils/: serialisation.py
tests/: data_loader_test.py  database_transformer_test.py  plot_builder_test.py
(+14 files in other folders)
